# super-version

./: .gitignore  Makefile  pyproject.toml  views.sql
src/: context_logger.py
src/agent/: assistant.py  event_handlers.py  metrics.py  order_task.py  state_manager.py  static_data.py
src/agent/agents/: assistant.py  basic_order_task.py  order_task.py
src/agent/tools/: __init__.py  configs.py  implementations.py  registry.py
src/core/: agent_session_config.py  api.py  config.py  main.py  mainy.py  server.py
src/data/: db_to_vector.py  vector_store.py
src/devaito/: main.py  mainy.py  vector.py
src/devaito/api/routes/: cache.py  database.py
src/devaito/config/: cache_config.py  database_config.py  global_config.py
src/devaito/db/: session.py
src/devaito/db/models/products/: ProductForVector.py  __init__.py  associations.py  basic_single_details.py  basic_variant_details.py  brand.py  category.py  color.py  custom_product_details.py  product.py
src/devaito/repositories/: products.py
src/devaito/schemas/: products.py
src/devaito/services/: products.py
src/devaito/utils/: tools.py
src/models/: order_models.py  product_models.py
src/schemas/: products.py
src/utils/: tools.py
